testsuite/tests/arrows/gadt/ArrowPatSyn1.stderr

ArrowPatSyn1.hs:16:15: error:
    • Proc patterns cannot use existential or GADT data constructors
    • In the pattern: P x
      In the expression: proc (P x) -> show -< x
      In an equation for ‘panic’: panic = proc (P x) -> show -< x
